--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,7 +1,7 @@
 .about {
     display: flex;
     align-items: center;
-
+    justify-content: center;
     background-image: url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -20,17 +20,45 @@
        
     }
     .multi-container {
-        background-color:rgba(138, 98, 66, 0.738);
-        width: 90%;
-        height: 80%;
+        background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        .text-container {
-            background-color: white;
+        // e4b963b7 left
+        // f79696ba right
+        .text-container-1 {
+            width: 90%;
+            height: 30%;
+            color:white;
+            margin-top:6rem;
+            
+            h3 {
+                font-family: 'Roboto', sans-serif;
+                font-weight: 900;
+                text-align: center;
+            }
+         
+            .skills {
+                display: flex;
+                flex-direction: column;
+                padding: 9px;
+                
+                p {
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 400;
+                    width: 80%;
+                    margin-left: 2rem;
+                }
+            }
+        }
+        .text-container-2 {
             width: 90%;
             height: 45%;
+            color:white;
+            margin-top:7rem;
             h3 {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 900;
@@ -38,11 +66,14 @@
             }
             .skills {
                 display: flex;
-                background-color: antiquewhite;
+                flex-direction: column;
                 padding: 9px;
+                margin-bottom: 6rem;
                 p {
                     font-family: 'Roboto', sans-serif;
                     font-weight: 400;
+                    width: 80%;
+                    margin-left: 2rem;
                 }
             }
         }
