--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,25 +1,50 @@
 .nav {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(57, 57, 68);
-    position:fixed;
-    bottom: 0;
-    
-    .icon-large {
-        width: 30px;
-        height: 30px;
-        color: white;
-      :hover{
-        color: black;
-      }
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: rgb(57, 57, 68);
+  position:fixed;
+  bottom: 0;
+  @media only screen and (min-width:915px)  {
+    top: 0;
+    justify-content:end;
+    padding-right: 20px;
+    background: linear-gradient(45deg,black, rgb(16, 54, 57), rgb(255, 72, 0));
+  }
+  .nav-btns {
+
+    text-decoration: none;
+    color: white;
+    p {
+      margin-top: 1rem;
+      padding-right: 10px;
     }
-    .activeClassName {
-        :active {
-            color: yellow;
-        }
+  }
+  .icon-large {
+    width: 30px;
+    height: 30px;
+    color: white;
+    @media only screen and (min-width:915px)  {
+      margin-right: 10px;
     }
-   
+    :hover{
+      color: black;
+    }
+  }
+  .activeClassName {
+    :active {
+        color: yellow;
+    }
+  }
+  .projects-title {
+    width: 60%;
+    height:60%;
+    @media only screen and (min-width:915px)  {
+      width: 30%;
+      height: 30%;
+      margin-right: 10rem;
+    }
+  }
 }
