--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,19 +1,66 @@
 @import "~bootstrap/scss/bootstrap";
 
 .projects {
-    background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    width: 100%;
-    flex-direction: column;
+  background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
+  background-repeat: no-repeat;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
   padding-bottom: 4.5rem;
+@media only screen and (min-width:768px) {
+  bagckground-size:cover;
+  height: 100vh;
 }
+  
+  @media only screen and (min-width:915px)  {
+    background-image: url("../assets/macbook.jpg");
+    background-size: cover;
+    height: 100vh;
+  }
+  .img-container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
 
-.title {
+  }
+
+  .projects-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    @media only screen and (min-width:768px)  {
+      flex-direction: row;
+      flex-wrap: nowrap;    
+    }
+  }
+
+  .card-img {
+    width: 100%;
+  
+  }
+.card:nth-child(4){
+  img {
+    height: 46%;
+  }
+}
+  .title {
     width: 60%;
     height:60%;
+    @media only screen and (min-width:915px)  {
+      width: 40%;
+      height: 50%;
+     margin-top: 4rem;
+    }
+    @media only screen and (min-width:1100px)  {
+      width: 30%;
+      height: 50%;
+     margin-top: 4rem;
+    }
+  }
 }
+
+
 
 // .card {
 //   display: flex;
