--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -5,43 +5,52 @@
   width: 100%;
   height: 60px;
   background-color: rgb(57, 57, 68);
-  position:fixed;
+  position: fixed;
   bottom: 0;
-  @media only screen and (min-width:915px)  {
-    top: 0;
-    justify-content:end;
-    padding-right: 20px;
-    background: linear-gradient(45deg,black, rgb(16, 54, 57), rgb(255, 72, 0));
-  }
-  .nav-btns {
 
+  @media only screen and (min-width:915px) {
+    top: 0;
+    justify-content: end;
+    padding-right: 20px;
+    background: linear-gradient(45deg, black, rgb(16, 54, 57), rgb(255, 72, 0));
+  }
+
+  .nav-btns {
     text-decoration: none;
     color: white;
+
+    :hover {
+      color: black;
+    }
+
     p {
       margin-top: 1rem;
       padding-right: 10px;
     }
   }
+
   .icon-large {
-    width: 30px;
+    width: 20px;
     height: 30px;
     color: white;
-    @media only screen and (min-width:915px)  {
-      margin-right: 10px;
-    }
-    :hover{
+
+    :hover {
       color: black;
     }
-  }
-  .activeClassName {
-    :active {
-        color: yellow;
+
+    @media only screen and (min-width:915px) {
+      margin-right: .5rem;
+
     }
+
   }
+
+  
   .projects-title {
     width: 60%;
-    height:60%;
-    @media only screen and (min-width:915px)  {
+    height: 60%;
+
+    @media only screen and (min-width:915px) {
       width: 30%;
       height: 30%;
       margin-right: 10rem;
