--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -31,7 +31,8 @@
     align-items: center;
     @media only screen and (min-width:768px)  {
       flex-direction: row;
-      flex-wrap: nowrap;    
+      flex-wrap: nowrap; 
+      margin-top: 2.7rem;   
     }
   }
 
@@ -48,12 +49,12 @@
     width: 60%;
     height:60%;
     @media only screen and (min-width:915px)  {
-      width: 40%;
+      width: 30%;
       height: 50%;
      margin-top: 4rem;
     }
     @media only screen and (min-width:1100px)  {
-      width: 30%;
+      width: 25%;
       height: 50%;
      margin-top: 4rem;
     }
