--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -52,7 +52,10 @@
     display: flex;
     justify-content: start;
     flex-direction: row;
-    margin-left: 2rem;
+    
+    @media only screen and (min-width:915px) {
+      margin-left: 2rem;
+    }
 
   }
   .in-links {
