fixed css keyword error

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -57,7 +57,7 @@
     }
     .download-button {
        display: flex;
-       justify-content: end;
+       justify-content: flex-end;
        margin-bottom: 4rem; 
        margin-right: 3rem;
     }
