--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -50,7 +50,7 @@
   }
   .out-links {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-direction: row;
     
     @media only screen and (min-width:915px) {
