--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -7,8 +7,11 @@
   width: 100%;
   flex-direction: column;
   // padding-bottom: 4.5rem
+ 
+ @media only screen and (min-width:386) {
   height: 100vh;
-  background-size: cover;
+ }
+  
   @media only screen and (min-width:915px)  {
     background-image: url("../assets/macbook.jpg");
     background-size: cover;
@@ -35,7 +38,6 @@
 
   .card-img {
     width: 100%;
-  
   }
 .card:nth-child(4){
   img {
