--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -2,16 +2,9 @@
 
 .projects {
   background: linear-gradient(to top, #785001cd,  #b25733ba), url("../assets/wp5146853-graffiti-4k-mobile-wallpapers.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  // padding-bottom: 4.5rem
- 
- @media only screen and (min-width:386) {
-  height: 100vh;
- }
-  
+
   @media only screen and (min-width:915px)  {
     background-image: url("../assets/macbook.jpg");
     background-size: cover;
@@ -29,7 +22,9 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 60px;
     @media only screen and (min-width:768px)  {
+      
       flex-direction: row;
       flex-wrap: nowrap; 
       margin-top: 2.7rem;   
@@ -50,12 +45,12 @@
     @media only screen and (min-width:915px)  {
       width: 30%;
       height: 50%;
-     margin-top: 4rem;
+      margin-top: 4rem;
     }
     @media only screen and (min-width:1100px)  {
       width: 25%;
       height: 50%;
-     margin-top: 4rem;
+      margin-top: 4rem;
     }
   }
 }
