Fixed card Containers

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -56,13 +56,10 @@
 
 
 
-// .card {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
+.card {
 
-// }
+
+}
 // .cardsContainer {
 //     display:flex; 
 //     flex-direction: column;
